c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_ptr_subtraction.c
struct s;

extern struct s *ptr;

int main(void) {
  // can't perform pointer substraction w/ pointers to incomplete types
  return (ptr - ptr) == 0;
}